# blathnaid

./: MANIFEST.in  NOTES.rst  README.rst  pyproject.toml
app/: NOTES.rst  tale.rst
blathnaid/: story.py
blathnaid/app/: NOTES.rst  metadata.py  tale.rst
blathnaid/book/: ante.rst  book.css  chapters.rst  end.rst  jacket.txt  verses.rst
blathnaid/dlg/: tale.rst
blathnaid/tale/: ante.rst  chapters.rst  tale.css
tools/: folio.py  tale.css
